# Cell-GPS

./: CONTRIBUTING.rst  HISTORY.rst  README.md  README.rst  README_new.md  REVIEWER_GUIDE.md  build_cellgps.ps1  cellgps.spec  pyproject.toml
.github/workflows/: publish-conda-channel.yml  python-publish.yml
Cell-GPS manuscript code/: README.md
Cell-GPS manuscript code/main_figures/: Figure_1_synthetic_benchmark.ipynb  Figure_2_mouse_pup_xenium.ipynb  Figure_3_lung_fibrosis_TRU.ipynb  Figure_4_lung_fibrosis_DST_GNN.ipynb  Figure_5_SSc_pleura_segment_free.ipynb
Cell-GPS manuscript code/supplementary_figures/: Supp_Fig_01_synthetic_modular.ipynb  Supp_Fig_02_synthetic_nested_patterns.ipynb  Supp_Fig_03_COSTE_nested_heatmaps.ipynb  Supp_Fig_04_Squidpy_nested_heatmaps.ipynb  Supp_Fig_05_Giotto_nested_heatmaps.ipynb  Supp_Fig_06_ANE_nested_heatmaps.ipynb  Supp_Fig_07_mouse_pup_structures.ipynb  Supp_Fig_08_mouse_pup_method_comparison.ipynb  Supp_Fig_09_squidpy_parameter_sensitivity.ipynb  Supp_Fig_10_lymph_node_structuremap.ipynb  Supp_Fig_11_lung_fibrosis_unclustered_heatmaps.ipynb  Supp_Fig_12_SSc_pleura_transcript_cell.ipynb  (+2 more)
conda-recipe/: README.md  meta.yaml
docs/: Makefile  cellgps_build_and_run_guide_en.docx  cellgps_build_and_run_guide_en.md  cellgps_build_and_run_guide_en_updated.docx  cellgps_exe_analysis_and_run_guide_zh.md  cellgps_science_manuscript_code_inventory.md  conf.py  index.rst  installation.rst  make.bat  reviewer_guide.rst  usage.rst
examples/: multi_sample_analysis_example.py  transcript_analysis_example.py
src/cellgps/: __init__.py  cli.py
tests/: __init__.py  test_cellgps.py  test_topology_extensions.py  test_xenium_pyxenium_io.py
(+18 files in other folders)
