[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Cell-GPS"
version = "0.0.6"
description = "Cell-GPS spatial topology analysis for spatial omics data."
readme = "README.md"
authors = [
    { name = "Taobo Hu", email = "taobo.hu@scilifelab.se" },
    { name = "Mengping Long", email = "mengping.long@scilifelab.se" },
    { name = "Mats Nilsson", email = "mats.nilsson@scilifelab.se" }
]
license = { text = "MIT License" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "psutil>=5.8",
    "joblib>=1.1",
    "tqdm>=4.60",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
gui = ["pillow"]
xenium = [
    "pyXenium>=0.4.3",
    "h5py>=3.0",
]
visium = [
    "spatialdata_io>=0.3",
]

[project.scripts]
cellgps-gui = "cellgps.gui.gui_app:main"

[project.urls]
Homepage = "https://github.com/hutaobo/cellgps"
Repository = "https://github.com/hutaobo/cellgps"
Preprint = "https://www.biorxiv.org/content/10.64898/2026.05.26.727847v1"
"Manuscript code" = "https://github.com/hutaobo/cellgps/tree/main/Cell-GPS%20manuscript%20code"
"Conda channel" = "https://github.com/hutaobo/conda-channel"

[tool.setuptools.packages.find]
where = ["src"]
